# init-project-tool

start_utility/src/: CMakeLists.txt  Log.hpp  files_init.cpp  files_init.hpp  fill_in.cpp  main.cpp
